[package]
name = "catalog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
redis = "0.27.2"
bb8-redis = "0.17.0"
bb8 = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
moqtail = { version = "0.1.0", path = "../../libs/moqtail-rs" }
