[package]
name = "relay"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wtransport = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.140"
bytes = "1.10.1"
moqtail = { version = "*", path = "../../libs/moqtail-rs" }
clap = { version = "4.5.40", features = ["derive"] }
tracing-appender = "0.2"
once_cell = "1.21.3"
moka = { version = "0.12", features = ["future"] }
fnv = "1.0.7"
