[package]
name = "moqtail"
description = "Draft 11-compliant Media-over-QUIC (MoQ) protocol library."
keywords = ["moq", "quic", "media", "protocol"]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"

# TODO: Enable doctest
[lib]
doctest = false

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.12"
wtransport = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
